--- a/src/styles/MoviePage.scss
+++ b/src/styles/MoviePage.scss
@@ -1,5 +1,8 @@
 .movie-page {
   margin: auto 0;
+  width: 100%;
+  height: auto;
+  overflow: auto;
 
   .container {
     position: fixed;
@@ -12,8 +15,6 @@
     padding-top: 2rem;
     width: 100%;
     height: 100%;
-    // overflow-y: scroll;
-    // scroll-behavior: smooth;
 
     .inside-box {
       display: flex;
@@ -29,7 +30,7 @@
         border: 1px solid #000;
         border-radius: 10px;
         height: fit-content;
-        width: 70%;
+        width: 80%;
         display: block;
         align-self: center;
         background-color: rgba(0, 0, 0, 0.7);
@@ -48,33 +49,41 @@
             justify-self: center;
             align-self: center;
             position: relative;
+            min-width: 0;
             .tagline {
               margin-top: 0;
               width: fit-content;
             }
             .about {
-              height: 80%;
-              width: 60vw;
+              height: auto;
+              width: fill-available;
+              flex-wrap: wrap;
+              text-align: justify;
             }
             .no-of-seasons {
               margin-top: 2rem;
-              width: fit-content;
             }
             .seasons {
               display: flex;
               flex-direction: row;
-              width: 60vw;
-              overflow: hidden;
-              flex: none;
-              .season {
+              flex-wrap: wrap;
+              max-height: 5rem;
+              overflow-y: auto;
+              display: flex;
+              .popover-button {
                 background-color: rgba(233, 221, 221, 0.2);
                 color: #fff;
-                cursor: default;
+                cursor: pointer;
                 border-radius: 2rem;
                 margin-right: 1rem;
                 width: fit-content;
                 font-size: x-small;
                 flex: none;
+                &:hover {
+                  background-color: rgba(212, 191, 191, 0.336);
+                  // transform: scale(1.2);
+                  // overflow: visible;
+                }
               }
             }
           }
@@ -82,10 +91,14 @@
       }
       .details {
         display: flex;
+        // .genres,
+        // .other-info {
+        //   width: 50%;
+        // }
         .genres .duration {
           padding-top: 1rem;
           display: inline-flex;
-          align-items: center;
+          // align-items: center;
         }
         .genre {
           background-color: rgba(233, 221, 221, 0.2);
@@ -93,6 +106,7 @@
           cursor: default;
           border-radius: 2rem;
           margin-right: 1rem;
+          align-self: flex-start;
         }
         .duration {
           align-self: center;
