--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,5 +1,36 @@
 html {
   background: linear-gradient(90deg, #bfb7b7, #e1dcdc, #f8f8f8);
+  overflow-y: scroll;
+
+  // ::-webkit-scrollbar-track {
+  //   border: 1px solid black;
+  //   background-color: #f5f5f5;
+  // }
+  // #card-container::-webkit-scrollbar {
+  //   width: 10px;
+  //   background-color: #cb2d2d;
+  // }
+  // #card-container::-webkit-scrollbar-thumb {
+  //   background-color: #f51e1e;
+  // }
+  .App {
+    ::-webkit-scrollbar {
+      width: 13px;
+      height: 13px;
+    }
+    ::-webkit-scrollbar-thumb {
+      background: linear-gradient(13deg, #f9d4ff 14%, #c7ceff 64%);
+      border-radius: 10px;
+    }
+    ::-webkit-scrollbar-thumb:hover {
+      background: linear-gradient(13deg, #c7ceff 14%, #f9d4ff 64%);
+    }
+    ::-webkit-scrollbar-track {
+      background: #ffffff;
+      border-radius: 10px;
+      box-shadow: inset 7px 10px 12px #f0f0f0;
+    }
+  }
 
   .App {
     text-align: center;
@@ -67,36 +98,6 @@ html {
         vertical-align: top;
       }
     }
-
-    #card-container {
-      padding: 0;
-      margin: 0;
-      list-style: none;
-
-      .movie-list {
-        position: relative;
-        color: #fff;
-        .MuiImageListItemBar-root {
-          background: rgba(0, 0, 0, 0.65);
-          .css-dasnyc-MuiImageListItemBar-title {
-            line-height: 20px;
-
-            text-align: left;
-          }
-          .css-dqr9h-MuiRating-label {
-            color: orange;
-          }
-        }
-        .bottom-right {
-          padding-right: 12px;
-          padding-top: 1px;
-          .rating {
-            vertical-align: top;
-          }
-        }
-      }
-    }
-
     .main-compartiment {
       margin-left: 14rem;
       margin-top: 4.5rem;
@@ -110,6 +111,60 @@ html {
         display: block;
         text-align: center;
       }
+      #card-container {
+        padding: 0;
+        margin: 0;
+        list-style: none;
+
+        .movie-list {
+          position: relative;
+          color: #fff;
+          .MuiImageListItemBar-root {
+            background: rgba(0, 0, 0, 0.65);
+            .css-dasnyc-MuiImageListItemBar-title {
+              line-height: 20px;
+
+              text-align: left;
+            }
+            .css-dqr9h-MuiRating-label {
+              color: orange;
+            }
+          }
+          .bottom-right {
+            padding-right: 12px;
+            padding-top: 1px;
+            .rating {
+              vertical-align: top;
+            }
+          }
+        }
+      }
     }
+  }
+}
+
+html {
+  ::-webkit-scrollbar-track {
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #f5f5f5;
+    border-radius: 10px;
+  }
+
+  ::-webkit-scrollbar {
+    width: 10px;
+    background-color: #f5f5f5;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-image: -webkit-gradient(
+      linear,
+      left bottom,
+      left top,
+      color-stop(0.44, rgb(122, 153, 217)),
+      color-stop(0.72, rgb(73, 125, 189)),
+      color-stop(0.86, rgb(28, 58, 148))
+    );
   }
 }
