--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -43,10 +43,10 @@ html {
         padding-left: 2rem;
       }
       &.active {
-        background-color: #2196f3;
+        background-color: #7a99d9;
         color: #fff;
         &:hover {
-          background-color: #2196f3;
+          background-color: #7a99d9;
         }
       }
       &:hover {
