--- a/src/styles/Pagination.scss
+++ b/src/styles/Pagination.scss
@@ -1,6 +1,7 @@
-.css-yuzg60-MuiButtonBase-root-MuiPaginationItem-root.Mui-selected {
-  // background-color: rgba(0, 0, 0, 0.08);
-  background-color: #429fe9;
-  opacity: 0.8;
-  color: #fff;
+.MuiPagination-ul {
+  & .Mui-selected {
+    background-color: #7a99d9;
+
+    color: #fff;
+  }
 }
