--- a/src/styles/MoviePage.scss
+++ b/src/styles/MoviePage.scss
@@ -3,6 +3,8 @@
   width: 100%;
   max-height: fit-content;
   overflow: auto;
+  font-size: large;
+
   .container {
     position: fixed;
     z-index: 5;
@@ -20,11 +22,6 @@
       flex-direction: column;
       justify-content: center;
       align-content: center;
-      -ms-overflow-style: none;
-      overflow: none;
-      ::-webkit-scrollbar {
-        display: none;
-      }
 
       .title_and_rating {
         display: block;
@@ -33,8 +30,8 @@
       .group {
         border: 1px solid #000;
         border-radius: 10px;
-        height: fit-content;
         width: 80%;
+        height: auto;
         display: block;
         align-self: center;
         background-color: rgba(0, 0, 0, 0.7);
